export products api
